# CAM_Codx

./: .gitignore  .mcp.json  AGENTS.md  CAM_CLI_ASSESSMENT.md  CAM_ORG_PLAN.md  DB_REGISTRY.md  DEBUG_MATRIX.md  DECISIONS.md  GOAL.md  GOAL_CAM_HYGIENE.md  IMPLEMENT.md  IMPLEMENTATION_PACKET.md  LICENSE  PRD.md  PROGRESS.md  README.md  REVIEW.md  WS5_CLI_REFACTOR_SPEC.md  _coverage_gaps.md  _design_approval.md  build_specs.md  build_to_do_checklist.md  pyproject.toml
.grok/: config.toml
baselines/: legacy_mcp_rss.txt  manifest.json  manifest.json.template  new_mcp_rss.txt  repo_set.txt
claw_codex_mcp/: __init__.py
docs/: AGENT_PACKS.md  ARCHITECTURE.md  FAQ.md  LAUNCH_CHECKLIST.md  NEW_COMPUTER_SETUP_WALKTHROUGH.md  NEW_USER_AUDIT_2026-06-19.md  QUICKSTART_CODEX.md  REAL_USE_CASE_TEST_PLAN.md  REPO_MAP.md  STATUS.md  TEMPLATE_GUIDE.md  WORKFLOW_REPO_NECROMANCER.md  _validation_gates.md
meta/: ACTION_PLANS_2026-05-29.md  HANDOFF_2026-05-17.md  HANDOFF_2026-05-19.md  HANDOFF_2026-05-20-PHASE3.md  HANDOFF_2026-05-20-PHASE4.md  HANDOFF_2026-05-20-PHASE5.md  HANDOFF_2026-05-20-PHASE6.md  HANDOFF_2026-05-20-PHASE7-9.md  HANDOFF_2026-05-20.md  HANDOFF_2026-05-26.md  HANDOFF_2026-05-27.md  HANDOFF_2026-05-28.md  HANDOFF_LATEST.md  NON_TECH_ASSESSMENT_2026-05-29.md  SHOWPIECE_DEMO_2026-05-29.md  SHOWPIECE_SELF_ENHANCE_2026-05-29.md  SHOWPIECE_SELF_ENHANCE_2026-05-29.txt  SHOWPIECE_SYNERGY_2026-05-29.md  VALIDATION_GAPS_2026-05-20.md
migrations/: 001_codex_outcome_log.sql
prompts/: orient_baseline.txt
scripts/: ws6_archive_clones.sh
tests/: conftest.py  (+2 more)
(+213 files in other folders)
